fixed text-alignment for the btns

--- a/src/app/shared/cta-btn/cta-btn.component.css
+++ b/src/app/shared/cta-btn/cta-btn.component.css
@@ -4,6 +4,7 @@
   display: inline-block;
   cursor: pointer;
   transition: background-color 100ms;
+  text-align: center;
 }
 .btn:hover {
   background-color: var(--brand-cta-color-dark);
